--- a/MVC_WEB/Views/Home/About.cshtml
+++ b/MVC_WEB/Views/Home/About.cshtml
@@ -1,9 +1,16 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
-</main>
+<div class="jumbotron text-center">
+    <h1>About</h1>
+    <p class="lead">Your application description page.</p>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <p>Use this area to provide additional information.</p>
+        </div>
+    </div>
+</div>
