--- a/MVC_WEB/Views/Schools/Index.cshtml
+++ b/MVC_WEB/Views/Schools/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MVC_WEB.Models.Student>
+﻿@model IEnumerable<MVC_WEB.Models.LoginViewModel>
 
 <div class="jumbotron text-center">
     <h2>Index</h2>
