--- a/MVC_WEB/Views/Shared/_Layout.cshtml
+++ b/MVC_WEB/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Admin</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -11,25 +11,25 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">School Management System</a>
+        <a class="navbar-brand" href="#">Quản Lý Sinh Viên</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Home", "Index", "Home", new { }, new { @class = "nav-link" })
+                    @Html.ActionLink("Trang Chủ", "Index", "Home", new { }, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("About", "About", "Home", new { }, new { @class = "nav-link" })
+                    @Html.ActionLink("Admin", "Index","Admin", new { }, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Contact", "Contact", "Home", new { }, new { @class = "nav-link" })
+                    @Html.ActionLink("Liên Hệ", "Contact", "Home", new { }, new { @class = "nav-link" })
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mt-4">
         @RenderBody()
     </div>
 </body>
